# generate-diff

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  cli.py  diff.py  formatter.py  parsers.py  tree.py
gendiff/format/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py
tests/fixtures/: file1.yml  file2.yml  result.json  result_plain  result_stylish
